samples/_failures_safe/1761494067_a10d3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65db99a3.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_65db99a3.c:179:23: error: expected ‘;’ at end of input
  179 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_65db99a3.c:179:17: error: expected declaration or statement at end of input
  179 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_65db99a3.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_65db99a3.c:179:17: error: expected declaration or statement at end of input
